--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,9 @@ add_executable(cpu intro/cpu.c)
 add_executable(mem intro/mem.c)
 add_executable(mutil cmake-build-debug/mutil.cpp)
 add_executable(IO_Redirect cmake-build-debug/IO_Redirect.cpp)
+add_executable(threads intro/threads.c)
+add_executable(temp cmake-build-debug/temp.cpp)
+add_executable(io intro/io.c)
+add_executable(p1 cpu-api/p1.c)
+add_executable(p2 cpu-api/p2.c)
+add_executable(p3 cpu-api/p3.c)
