--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(io intro/io.c)
 add_executable(p1 cpu-api/p1.c)
 add_executable(p2 cpu-api/p2.c)
 add_executable(p3 cpu-api/p3.c)
+add_executable(p4 cpu-api/p4.c)
