feature: 父子进程同时修改同一个变量
result: 子进程复制（但不共享）父进程中的局部变量值

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(p1 cpu-api/p1.c)
 add_executable(p2 cpu-api/p2.c)
 add_executable(p3 cpu-api/p3.c)
 add_executable(p4 cpu-api/p4.c)
+add_executable(p5 cpu-api/p5.c)
